--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,3 +1,8 @@
 {
+  "accountLogin": "Войти в аккаунт",
+  "accountRegister": "Регистрация",
+  "brand": "Финик",
+  "login": "Войти",
+  "loginCallToAction": "Отмечай места на карте где нет нашего терминала, мы поставим его, а тебе пришлем бонусы которые ты сможешь обменять на реальные призы",
   "map": "Карта"
 }
