feat: translate the latest logic

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -2,7 +2,12 @@
   "accountLogin": "Войти в аккаунт",
   "accountRegister": "Регистрация",
   "brand": "Финик",
+  "finikMapProductDescription": "Карта, терминалов от Finik, исследуйте, отмечайте и зарабатывайте баллы",
   "login": "Войти",
   "loginCallToAction": "Отмечай места на карте где нет нашего терминала, мы поставим его, а тебе пришлем бонусы которые ты сможешь обменять на реальные призы",
-  "map": "Карта"
+  "mailAlreadyExists": "Такой e-mail уже существует в системе",
+  "map": "Карта",
+  "next": "Далее",
+  "onlyEmail": "Нам нужна только ваша почта",
+  "register": "Регистрация"
 }
