feat: translate password elements

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "accountLogin": "Войти в аккаунт",
   "accountRegister": "Регистрация",
   "brand": "Финик",
+  "enterPassword": "Введите пароль",
   "finikMapProductDescription": "Карта, терминалов от Finik, исследуйте, отмечайте и зарабатывайте баллы",
   "login": "Войти",
   "loginCallToAction": "Отмечай места на карте где нет нашего терминала, мы поставим его, а тебе пришлем бонусы которые ты сможешь обменять на реальные призы",
@@ -9,5 +10,6 @@
   "map": "Карта",
   "next": "Далее",
   "onlyEmail": "Нам нужна только ваша почта",
-  "register": "Регистрация"
+  "register": "Регистрация",
+  "repeatPassword": "Повторите пароль"
 }
