--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,6 +2,7 @@
   "accountLogin": "Account login",
   "accountRegister": "Register an account",
   "brand": "Finik",
+  "enterPassword": "Enter password",
   "finikMapProductDescription": "Finik is a terminal map. Discover, add terminals and earn points",
   "login": "Login",
   "loginCallToAction": "Use the map to mark places where a terminal is absent, we will install one and you will receive a bonus to exchange for prizes",
@@ -9,5 +10,6 @@
   "map": "Map",
   "next": "Next",
   "onlyEmail": "Only an e-mail is necessary",
-  "register": "Register"
+  "register": "Register",
+  "repeatPassword": "Repeat password"
 }
