--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -7,6 +7,7 @@
   "login": "Войти",
   "loginCallToAction": "Отмечай места на карте где нет нашего терминала, мы поставим его, а тебе пришлем бонусы которые ты сможешь обменять на реальные призы",
   "mailAlreadyExists": "Такой e-mail уже существует в системе",
+  "mailNotValid": "Неправильный формат e-mail",
   "map": "Карта",
   "next": "Далее",
   "onlyEmail": "Нам нужна только ваша почта",
