--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -11,6 +11,9 @@
   "map": "Карта",
   "next": "Далее",
   "onlyEmail": "Нам нужна только ваша почта",
+  "OTPEnter": "Введи код из СМС",
+  "OTPExplanation": "Введи полученный код, чтобы подтвердить свой номер телефона",
+  "OTPSendAgain": "Отправить код заново",
   "register": "Регистрация",
   "repeatPassword": "Повторите пароль"
 }
