feat: - render password input stage

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,6 +3,7 @@
   "accountRegister": "Register an account",
   "brand": "Finik",
   "enterPassword": "Enter password",
+  "entrance": "Log in",
   "finikMapProductDescription": "Finik is a terminal map. Discover, add terminals and earn points",
   "login": "Login",
   "loginCallToAction": "Use the map to mark places where a terminal is absent, we will install one and you will receive a bonus to exchange for prizes",
