--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -3,6 +3,7 @@
   "accountRegister": "Регистрация",
   "brand": "Финик",
   "enterPassword": "Введите пароль",
+  "entrance": "Вход",
   "finikMapProductDescription": "Карта, терминалов от Finik, исследуйте, отмечайте и зарабатывайте баллы",
   "login": "Войти",
   "loginCallToAction": "Отмечай места на карте где нет нашего терминала, мы поставим его, а тебе пришлем бонусы которые ты сможешь обменять на реальные призы",
