--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -15,6 +15,7 @@
   "OTPEnter": "Введи код из СМС",
   "OTPExplanation": "Введи полученный код, чтобы подтвердить свой номер телефона",
   "OTPSendAgain": "Отправить код заново",
+  "OTPVerifying": "Проверка...",
   "register": "Регистрация",
   "repeatPassword": "Повторите пароль"
 }
