refactor: - rename register to signUp in translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -16,6 +16,6 @@
   "OTPExplanation": "Enter the received one-time password to verify your phone number",
   "OTPSendAgain": "Send one-time password again",
   "OTPVerifying": "Verifying...",
-  "register": "Register",
+  "signUp": "Sign up",
   "repeatPassword": "Repeat password"
 }
