--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -16,6 +16,6 @@
   "OTPExplanation": "Введи полученный код, чтобы подтвердить свой номер телефона",
   "OTPSendAgain": "Отправить код заново",
   "OTPVerifying": "Проверка...",
-  "register": "Регистрация",
+  "signUp": "Регистрация",
   "repeatPassword": "Повторите пароль"
 }
