refactor: - rename keys in translations

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -3,9 +3,9 @@
   "accountRegister": "Регистрация",
   "brand": "Финик",
   "enterPassword": "Введите пароль",
-  "entrance": "Вход",
+  "logIn": "Вход",
   "finikMapProductDescription": "Карта, терминалов от Finik, исследуйте, отмечайте и зарабатывайте баллы",
-  "login": "Войти",
+  "loginAction": "Войти",
   "loginCallToAction": "Отмечай места на карте где нет нашего терминала, мы поставим его, а тебе пришлем бонусы которые ты сможешь обменять на реальные призы",
   "mailAlreadyExists": "Такой e-mail уже существует в системе",
   "mailNotValid": "Неправильный формат e-mail",
