feat: - add reset password text

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,6 +3,7 @@
   "accountRegister": "Register an account",
   "brand": "Finik",
   "enterPassword": "Enter password",
+  "resetPassword": "Reset password",
   "logIn": "Log in",
   "finikMapProductDescription": "Finik is a terminal map. Discover, add terminals and earn points",
   "loginAction": "Login",
