--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -3,6 +3,7 @@
   "accountRegister": "Регистрация",
   "brand": "Финик",
   "enterPassword": "Введите пароль",
+  "resetPassword": "Не помню пароль",
   "logIn": "Вход",
   "finikMapProductDescription": "Карта, терминалов от Finik, исследуйте, отмечайте и зарабатывайте баллы",
   "loginAction": "Войти",
