feat: - implement password reset state

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,12 +3,14 @@
   "accountRegister": "Register an account",
   "brand": "Finik",
   "enterPassword": "Enter password",
+  "newPassword": "New password",
   "resetPassword": "Reset password",
   "logIn": "Log in",
   "finikMapProductDescription": "Finik is a terminal map. Discover, add terminals and earn points",
   "loginAction": "Login",
   "loginCallToAction": "Use the map to mark places where a terminal is absent, we will install one and you will receive a bonus to exchange for prizes",
   "mailAlreadyExists": "This e-mail is already registered",
+  "mailForPasswordReset": "Enter mail to receive a code to reset your password",
   "mailNotValid": "Bad e-mail format",
   "map": "Map",
   "next": "Next",
@@ -16,6 +18,7 @@
   "OTPEnter": "Enter one-time password from SMS",
   "OTPExplanation": "Enter the received one-time password to verify your phone number",
   "OTPSendAgain": "Send one-time password again",
+  "OTPSendSMS": "Send OTP by SMS",
   "OTPVerifying": "Verifying...",
   "signUp": "Sign up",
   "repeatPassword": "Repeat password"
