--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -3,12 +3,14 @@
   "accountRegister": "Регистрация",
   "brand": "Финик",
   "enterPassword": "Введите пароль",
+  "newPassword": "Новый пароль",
   "resetPassword": "Не помню пароль",
   "logIn": "Вход",
   "finikMapProductDescription": "Карта, терминалов от Finik, исследуйте, отмечайте и зарабатывайте баллы",
   "loginAction": "Войти",
   "loginCallToAction": "Отмечай места на карте где нет нашего терминала, мы поставим его, а тебе пришлем бонусы которые ты сможешь обменять на реальные призы",
   "mailAlreadyExists": "Такой e-mail уже существует в системе",
+  "mailForPasswordReset": "Введите почту, мы отправим туда код для восстановления пароля",
   "mailNotValid": "Неправильный формат e-mail",
   "map": "Карта",
   "next": "Далее",
@@ -16,6 +18,7 @@
   "OTPEnter": "Введи код из СМС",
   "OTPExplanation": "Введи полученный код, чтобы подтвердить свой номер телефона",
   "OTPSendAgain": "Отправить код заново",
+  "OTPSendSMS": "Получить код через СМС",
   "OTPVerifying": "Проверка...",
   "signUp": "Регистрация",
   "repeatPassword": "Повторите пароль"
