feat: - add translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,6 +2,7 @@
   "accountLogin": "Account login",
   "accountRegister": "Register an account",
   "brand": "Finik",
+  "checking": "Checking...",
   "enterPassword": "Enter password",
   "newPassword": "New password",
   "resetPassword": "Reset password",
