--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "accountLogin": "Войти в аккаунт",
   "accountRegister": "Регистрация",
   "brand": "Финик",
+  "checking": "Проверка...",
   "enterPassword": "Введите пароль",
   "newPassword": "Новый пароль",
   "resetPassword": "Не помню пароль",
