feat: ! add translation for mailNotRegistered error

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -12,6 +12,7 @@
   "loginCallToAction": "Отмечай места на карте где нет нашего терминала, мы поставим его, а тебе пришлем бонусы которые ты сможешь обменять на реальные призы",
   "mailAlreadyExists": "Такой e-mail уже существует в системе",
   "mailForPasswordReset": "Введите почту, мы отправим туда код для восстановления пароля",
+  "mailNotRegistered": "E-mail не зарегистрирован",
   "mailNotValid": "Неправильный формат e-mail",
   "map": "Карта",
   "next": "Далее",
