--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -12,6 +12,7 @@
   "loginCallToAction": "Use the map to mark places where a terminal is absent, we will install one and you will receive a bonus to exchange for prizes",
   "mailAlreadyExists": "This e-mail is already registered",
   "mailForPasswordReset": "Enter mail to receive a code to reset your password",
+  "mailNotRegistered": "E-mail not registered",
   "mailNotValid": "Bad e-mail format",
   "map": "Map",
   "next": "Next",
