feat: ! add translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -22,6 +22,9 @@
   "OTPSendAgain": "Send one-time password again",
   "OTPSendSMS": "Send OTP by SMS",
   "OTPVerifying": "Verifying...",
+  "point": "point",
+  "points": "points",
+  "search": "Search",
   "signUp": "Sign up",
   "repeatPassword": "Repeat password"
 }
