--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -21,6 +21,7 @@
   "OTPExplanation": "Введи полученный код, чтобы подтвердить свой номер телефона",
   "OTPSendAgain": "Отправить код заново",
   "OTPSendSMS": "Получить код через СМС",
+  "OTPTooShort": "Введенный код слишком короткий",
   "OTPVerifying": "Проверка...",
   "point": "балл",
   "points": "баллов",
