feat: ! translate errors

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,6 +3,7 @@
   "accountRegister": "Register an account",
   "brand": "Finik",
   "checking": "Checking...",
+  "cognitoUsernameExistsException": "User is already registered",
   "enterPassword": "Enter password",
   "newPassword": "New password",
   "resetPassword": "Reset password",
@@ -23,6 +24,13 @@
   "OTPSendSMS": "Send OTP by SMS",
   "OTPTooShort": "OTP code is too short",
   "OTPVerifying": "Verifying...",
+  "passwordNoUppercase": "Password should have an uppercase letter",
+  "passwordNotMatching": "Passwords are not matching",
+  "passwordEmpty":  "Password is empty",
+  "passwordNoLowercaseChars": "Password should have a lowercase letter",
+  "passwordNoDigit":  "Password should have a digit",
+  "passwordNoSpecialCharacters": "Password should have a special character",
+  "passwordTooShort":  "Password should have at least 8 character",
   "point": "point",
   "points": "points",
   "search": "Search",
