--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -3,6 +3,7 @@
   "accountRegister": "Регистрация",
   "brand": "Финик",
   "checking": "Проверка...",
+  "cognitoUsernameExistsException": "Пользователь уже зарегистрирован",
   "enterPassword": "Введите пароль",
   "newPassword": "Новый пароль",
   "resetPassword": "Не помню пароль",
@@ -23,6 +24,13 @@
   "OTPSendSMS": "Получить код через СМС",
   "OTPTooShort": "Введенный код слишком короткий",
   "OTPVerifying": "Проверка...",
+  "passwordNoUppercase": "В пароле должна быть заглавная буква",
+  "passwordNotMatching": "Пароли не совпадают",
+  "passwordEmpty":  "Введите пароль 2 раза",
+  "passwordNoLowercaseChars": "В пароле должна быть строчная буква",
+  "passwordNoDigit":  "В пароле должна быть цифра",
+  "passwordNoSpecialCharacters": "В пароле должен быть специальный символ",
+  "passwordTooShort":  "Пароль должен иметь хотя бы 8 символов",
   "point": "балл",
   "points": "баллов",
   "search": "Поиск",
